# diablogram

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  PROJECT_SPEC.md  README.md  SESSION_CONTEXT.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  crypto.py  db.py  main.py  worker.py
app/models/: __init__.py  account.py  assignment.py  channel.py  comment_log.py  persona.py  settings.py
app/services/: ai_generator.py  content_filter.py  exceptions.py  notifier.py  orchestrator.py  seed.py  sync.py  telegram_manager.py
app/web/: templating.py
app/web/routes/: accounts.py  channels.py  dashboard.py  logs.py  personas.py  settings.py
app/web/static/: style.css
app/web/templates/: account_detail.html  accounts.html  base.html  channels.html  dashboard.html  logs.html  personas.html  settings.html
migrations/: env.py
migrations/versions/: 8a0f62730212_initial_schema.py  d9d01acf87e9_add_channel_invite_link.py
scripts/: generate_session.py
