[project]
name = "diablogram-ai"
version = "0.1.0"
description = "Neuro-commenting service for Telegram channels"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "telethon>=1.36",
    "pysocks>=1.7.1",
    "anthropic>=0.40",
    "openai>=1.55",
    "apscheduler>=3.11",
    "httpx>=0.27",
    "cryptography>=43.0",
]

[tool.setuptools]
packages = ["app"]
